<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="hello">Hello World, BioinformaticsAppHomeActivity!</string>
    <string name="app_name">Oh BLAST It!</string>
    <string name="blastqueryentry_submit_btn_label">Submit Job</string>
    <string name="main_setup_query_btn_label">Setup A Query</string>
    <string name="query_submitted_text">Query submitted</string>
    <string name="blastqueryentry_textview_label">Sequence</string>
    <string name="main_menuitem_add">Set up a query</string>
    <string-array name="blast_database_options">
        <item >em_rel</item>
        <item >em_rel_fun</item>
        <item >em_fun</item>
    </string-array>
    <string name="blastqueryentry_database_spinner_label">Database</string>
    <string name="blastqueryentry_program_label">Program</string>
    <string-array name="blast_program_options">
        <item >blastn</item>
        <item >tblastx</item>
    </string-array>
    <string name="default_text">Default text</string>
    <string name="blastqueryentry_save_btn_label">Save Query</string>
    <string name="blastqueryentry_screen_title">Create Query</string>
    <string name="blastqueryentry_send_menu_label">Send</string>
    <string name="viewblaststats_blastjobId_label">BLAST Job ID:</string>
    <string name="blastquerystats_scientificname_label">Scientific Name:</string>
    <string name="blastquerystats_blastdatabase_label">Database:</string>
    <string name="blastquerystats_score_label">Score:</string>
    <string name="mainmenu_item_viewdrafts">View Drafts</string>
    <string name="save_string">Save</string>
    <string name="blastquerysaved_text">Draft Query Saved</string>
    <string name="blastqueryentry_matrix_label">Matrix</string>
    <string-array name="scoring_matrix_options">
        <item >BLOSUM45</item>
        <item >BLOSUM50</item>
        <item >BLOSUM62</item>
        <item >BLOSUM80</item>
        <item >BLOSUM90</item>
        <item >PAM30</item>
        <item >PAM70</item>
        <item >PAM250</item>
    </string-array>
    <string-array name="exp_threshold_options">
        <item >1e-200</item>
        <item >1e-100</item>
        <item >1e-50</item>
        <item >1e-10</item>
        <item >1e-5</item>
        <item >1e-4</item>
        <item >1e-3</item>
        <item >1e-2</item>
        <item >1e-1</item>
        <item >10</item>
        <item >100</item>
        <item >1000</item>
    </string-array>
        <string name="blastqueryentry_expthreshold_txtview_label">Exp. Threshold</string>
        <string name="lineage_label_string">Lineage:</string>
        <string name="blastquerystats_taxId_label">Taxonomy ID</string>
        <string name="retrieve_results_button_label">Retrieve Hits</string>
        <string name="blastquerystats_expthreshold_label">Expectation Threshold:</string>
        <string name="blastquerystats_sequence_label">Sequence</string>
        <string android:layout_width="wrap_content" android:id="@+id/string1" android:layout_height="wrap_content" name="blastqueryentry_score_label">Score</string>
        <string-array name="blastqueryentry_score_options">
            <item >5</item>
            <item >10</item>
            <item >20</item>
            <item >50</item>
            <item >100</item>
            <item >150</item>
        </string-array>
        <string name="delete_query_message">This query will be deleted</string>
        <string name="settings_label">Settings</string>
        <string name="loading_string">Loading...</string>
        <string-array name="ncbi_database_options">
            <item >nr</item>
            <item >nt</item>
            <item >refseq_genomic</item>
        </string-array>
            <string name="ncbi_word_size_label">Word Size</string>
            <string-array name="ncbi_word_size_options">
                <item >16</item>
                <item >20</item>
                <item >24</item>
                <item>28</item><item >32</item>
                <item >48</item>
                <item >64</item>
                
                <item >128</item>
                <item >256</item>
            </string-array>
                <string name="blastqueryentry_matchmismatch_score_label">Match/Mis-Match Score</string>
                <string-array name="ncbi_match_mismatch_score_options">
                    <item >1,-2</item>
                    <item >1,-3</item>
                    <item >1,-4</item>
                    <item >2,-3</item>
                    <item >4,-5</item>
                    <item >1,-1</item>
                </string-array>
                <string name="blastqueryentry_email_label">E-mail</string>
                <string name="embl">EMBL</string>
                <string name="ncbi">NCBI</string>
                <string name="no_hits_message">No BLAST Hits Found</string>
                <string name="view_query_parameters">View BLAST query parameters</string>
                <string-array name="ebi_match_mismatch_score_options">
                    <item >2,-7</item>
                    <item >1,-3</item>
                    <item >2,-5</item>
                    <item >1,-2</item>
                    <item >2,-3</item>
                    <item >1,-1</item>
                    <item >5,-4</item>
                    <item >4,-5</item>
                </string-array>
                <dimen name="padding">6dp</dimen>
                <string name="to">To: </string>

</resources>