<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/parameters_program_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/blastqueryentry_program_label" />

    <TextView
        android:id="@+id/query_program_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/parameters_program_label"
        android:text="@string/default_text"
        android:textSize="10dp" />

    <TextView
        android:id="@+id/parameters_blastdatabase_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/query_program_value"
        android:layout_marginTop="20dp"
        android:text="@string/blastquerystats_blastdatabase_label" />

    <TextView
        android:id="@+id/query_database_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/parameters_blastdatabase_label"
        android:text="@string/default_text"
        android:textSize="10dp" />

    <TextView
        android:id="@+id/parameters_scoring_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/query_database_value"
        android:layout_marginTop="20dp"
        android:text="@string/blastquerystats_score_label" />

    <TextView
        android:id="@+id/query_score_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/parameters_scoring_label"
        android:text="@string/default_text"
        android:textSize="10dp" />

    <TextView
        android:id="@+id/parameters_expthreshold_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/query_score_value"
        android:layout_marginTop="20dp"
        android:text="@string/blastquerystats_expthreshold_label" />

    <TextView
        android:id="@+id/query_expthreshold_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/parameters_expthreshold_label"
        android:text="@string/default_text"
        android:textSize="10dp" />

    <TextView
        android:id="@+id/parameter_sequence_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/query_expthreshold_value"
        android:layout_marginTop="20dp"
        android:text="@string/blastquerystats_sequence_label" />

    <TextView
        android:id="@+id/query_sequence_value"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/parameter_sequence_label"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/default_text"
        android:textSize="10dp" />

    <Button
        android:id="@+id/retrieve_results_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/query_sequence_value"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/retrieve_results_button_label" />

</RelativeLayout>