<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/query_email_text_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/dialog_program_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/blastqueryentry_program_label" />

    <TextView
        android:id="@+id/query_program_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dialog_program_label"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/dialog_database_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/query_program_text_view"
        android:layout_marginTop="36dp"
        android:text="@string/blastqueryentry_database_spinner_label" />

    <TextView
        android:id="@+id/query_database_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dialog_database_label"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/query_exp_threshold_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/query_database_text_view"
        android:layout_marginTop="46dp"
        android:text="@string/blastqueryentry_expthreshold_txtview_label" />

    <TextView
        android:id="@+id/query_exp_threshold_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/query_exp_threshold_label"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/dialog_score_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/query_exp_threshold_text_view"
        android:layout_marginTop="56dp"
        android:text="@string/blastqueryentry_score_label" />
    <TextView
        android:id="@+id/query_score_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dialog_score_label"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/dialog_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/query_score_text_view"
        android:layout_marginTop="66dp"
        android:text="@string/blastqueryentry_email_label" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dialog_email_label"
        android:text="@string/app_name" />
    
</RelativeLayout>