<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="right"
    android:orientation="vertical"
    android:scrollbars="vertical" xmlns:android="http://schemas.android.com/apk/res/android">

    
    <TextView
        android:id="@+id/sequence_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/blastqueryentry_textview_label" />
    
    <EditText 
        android:id="@+id/embl_sequence_editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sequence_label"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/blast_program_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/embl_sequence_editor"
        android:layout_marginTop="22dp"
        android:text="@string/blastqueryentry_program_label" />

    <Spinner
        android:id="@+id/blastqueryentry_program_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_alignBaseline="@+id/blast_program_label"
        android:entries="@array/blast_program_options" />

     <TextView
        android:id="@+id/database_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/blast_program_label"
        android:text="@string/blastqueryentry_database_spinner_label" />

    <Spinner
        android:id="@+id/blastqueryentry_database_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_alignBaseline="@+id/database_label"
        android:entries="@array/blast_database_options" />
    
    
     <TextView
        android:id="@+id/exp_threshold_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/database_label"
        android:text="@string/blastqueryentry_expthreshold_txtview_label" />
     
     <Spinner
        android:id="@+id/blastqueryentry_expthreshold_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/exp_threshold_label"
        android:layout_marginLeft="140dp"
        android:entries="@array/exp_threshold_options" />
    
    <TextView
        android:id="@+id/score_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/exp_threshold_label"
        android:text="@string/blastqueryentry_score_label" />
     
      <Spinner
        android:id="@+id/blastqueryentry_score_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/score_label"
        android:layout_marginLeft="140dp"
        android:entries="@array/blastqueryentry_score_options" />

     <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="55dp"
        android:layout_below="@+id/score_label"
        android:text="@string/blastqueryentry_email_label" />  
     
     <EditText
        android:id="@+id/embl_send_to_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/email_label"
        android:layout_alignBottom="@+id/email_label"
        android:layout_marginLeft="140dp"
        android:inputType="textEmailAddress"
         />
    
    
</RelativeLayout>