<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_vertical" >

    <TextView
        android:id="@+id/ncbi_sequence_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/blastquerystats_sequence_label" />

    <EditText
        android:id="@+id/ncbi_sequence_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ncbi_sequence_label"
        android:layout_marginTop="21dp" />

    

    <TextView
        android:id="@+id/ncbi_program_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ncbi_sequence_edittext"
        android:layout_marginTop="51dp"
        android:text="@string/blastqueryentry_program_label" />

    <Spinner
        android:id="@+id/ncbi_program_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ncbi_program_label"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="26dp"
        android:entries="@array/blast_program_options" />

    <TextView
        android:id="@+id/ncbi_database_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ncbi_program_label"
        android:layout_marginTop="36dp"
        android:text="@string/blastqueryentry_database_spinner_label" />

    <Spinner
        android:id="@+id/ncbi_database_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ncbi_database_label"
        android:layout_centerHorizontal="true"
        android:entries="@array/ncbi_database_options" />

    <TextView
        android:id="@+id/ncbi_exp_threshold_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ncbi_database_label"
        android:layout_marginTop="34dp"
        android:text="@string/blastqueryentry_expthreshold_txtview_label" />

    <EditText
        android:id="@+id/ncbi_exp_threshold_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ncbi_exp_threshold_label"
        android:layout_alignBottom="@+id/ncbi_exp_threshold_label"
        android:layout_centerHorizontal="true"
        android:digits="01234567890."
        android:inputType="number" >        
    </EditText>

    <TextView
        android:id="@+id/ncbi_word_size_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ncbi_exp_threshold_edittext"
        android:layout_marginTop="31dp"
        android:text="@string/ncbi_word_size_options_label" />

    <Spinner
        android:id="@+id/ncbi_wordsize_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ncbi_word_size_label"
        android:layout_alignBottom="@+id/ncbi_word_size_label"
        android:layout_centerHorizontal="true"
        android:entries="@array/ncbi_word_size_options" />

    <TextView
        android:id="@+id/ncbi_matchmismatch_score_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ncbi_word_size_label"
        android:layout_marginTop="34dp"
        android:text="@string/blastqueryentry_matchmismatch_score_label" />

    <Spinner
        android:id="@+id/ncbi_match_mismatch_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ncbi_matchmismatch_score_label"
        android:layout_toRightOf="@+id/ncbi_exp_threshold_edittext"
        android:entries="@array/ncbi_match_mismatch_score_options" />
    
</RelativeLayout>